--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Royals</title>
 </head>
-<body>
-    
+
+<body>How to use github collaboratively
+    </h1>
+    <p>One person add h2</p>
+
 </body>
+
 </html>
