changes made by Dikgang

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>How to use github collaboratively
     </h1>
     <p>One person add h2</p>
+    
+
+    <p>Dikgang was also able to make changes
+        
+    </p>
 
 </body>
 
