--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Royals</title>
-</head>
+    <link rel="stylesheet" href="./css/styles.css" </head>
 
 <body>How to use github collaboratively
     </h1>
     <p>One person add h2</p>
-    
+
 
     <p>Dikgang was also able to make changes
-        
-    </p>
 
+    </p>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
