init front end as react template from scratch

--- a/index.html
+++ b/index.html
@@ -5,17 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Royals</title>
-    <link rel="stylesheet" href="./css/styles.css" </head>
+    <title></title>
+    <link rel="stylesheet" href="./css/styles.css" />
+</head>
 
-<body>How to use github collaboratively
-    </h1>
-    <p>One person add h2</p>
+<body>
+    <div class="container">
+        Yonela
+        <div class="wrapper">
+            <h1>Enter Your Details</h1>
+            <div class="content">
+                <div>
+                    <h3>Select Fuel Type</h3>
+                </div>
+                <div>
+                    <label for="diesel-price">Current Diesel Price per Liter</label>
+                    <p>R 2.08</p>
+                    <input typ="number" name="diesel-price" />
+                </div>
+            </div>
+        </div>
+    </div>
 
-
-    <p>Dikgang was also able to make changes
-
-    </p>
     <script src="./js/app.js"></script>
 </body>
 
