--- a/index.html
+++ b/index.html
@@ -27,22 +27,26 @@
         <div class="main">
             <h1 class="title header">Fuel Forecast</h1>
             <div class="wrapper">
-                <h1 class="title">Enter Your Details</h1>
+                <h3 class="sub-title">Enter Your Details</h3>
                 <div class="content">
                     <!-- MAIN CONTENT -->
                     <div class="main-content">
                         <h3>Select Fuel Type</h3>
-                        <div class="dropdown-selection"></div>
+                        <div class="dropdown-selection">
+
+                        </div>
                         <!-- Drop down selection -->
                         <div class='dropdown'>
-                            <div class='dropdown-btn'>Select Fuel</div>
-                        </div>
-                        <div class='dropdown-content'>
-                            <div class='dropdown-item'>
-                                <p>Petrol</p>
+                            <div class='dropdown-btn'>
+                                <p>Select Fuel</p>
                             </div>
-                            <div class='dropdown-item'>
-                                <p>Diesel</p>
+                            <div class='dropdown-content'>
+                                <div class='dropdown-item'>
+                                    <p>Petrol</p>
+                                </div>
+                                <div class='dropdown-item'>
+                                    <p>Diesel</p>
+                                </div>
                             </div>
                         </div>
                     </div>
