--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
         <div class="main">
             <h1 class="title header">Fuel Forecast</h1>
             <div class="wrapper">
-                <h3 class="sub-title">Enter Your Details</h3>
+                <h3 class="sub-title">Fuel</h3>
                 <div class="content">
                     <!-- MAIN CONTENT -->
                     <div class="main-content">
@@ -96,10 +96,19 @@
                         <div class="user-amount">
                             <label class='label' name="Amount">Data</label>
                             <h4>Data of Linda</h4>
-                            <div>
-                                <canvas id="fuelChartForecast"></canvas>
-                            </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main second-main">
+            <div class="second-wrapper">
+                <h3 class="sub-title">Weekly Fuel Forecast: Rands</h3>
+                <div class="second-content">
+                    <div class="third-main-content">
+                        <label class='label' name="Amount">Data</label>
+                        <h4>Data of Linda</h4>
+                        <canvas id="fuelChartForecast"></canvas>
                     </div>
                 </div>
             </div>
@@ -107,7 +116,7 @@
         <div class="main third-main">
             <!-- <h1 class="title header">Fuel Forecast</h1> -->
             <div class="second-wrapper">
-                <h3 class="sub-title">Monthly Fuel Forecast</h3>
+                <h3 class="sub-title">Weekly Fuel Forecast: Litres</h3>
                 <div class="second-content">
                     <div class="third-main-content">
                         <label class='label' name="Amount">Data</label>
