getting data to charts

--- a/main.html
+++ b/main.html
@@ -82,6 +82,7 @@
                 <div class="second-content">
                     <!-- MAIN CONTENT -->
                     <div class="second-main-content">
+                        <h3 class="current-fuel-price"></h3>
                         <h3 class="fuel-price"></h3>
                         <h3 class="amount-budget"></h3>
                         <h3 class="calc-litres"></h3>
@@ -92,10 +93,11 @@
                             <div class="button save">Save</div>
                         </div>
                     </div>
-                    <div class="main-content">
-                        <div class="user-amount">
-                            <label class='label' name="Amount">Data</label>
-                            <h4>Data of Linda</h4>
+                    <div class="user-content">
+                        <div class="stored-data">
+                        </div>
+                        <div class="weekly-data">
+
                         </div>
                     </div>
                 </div>
