--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
                             <div class='input-container'>
                                 <label class='label' name="Amount">Enter <span class='fuel-change-two'>fuel</span>
                                     price</label>
-                                <input class='input-amount' value="" type="number" />
+                                <div>
+                                    R
+                                    <input class='input-amount' value="" type="number" />
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -57,7 +60,10 @@
                             <div class='input-container'>
                                 <label class='label' name="Amount">Enter <span class='fuel-change'>fuel</span>
                                     amount</label>
-                                <input class='entered-fuel-amount' value="" type="number" />
+                                <div>
+                                    R
+                                    <input class='entered-fuel-amount' value="" type="number" />
+                                </div>
                             </div>
                         </div>
                         <h3 class='label'>Enter amount of fuel per liter</h3>
@@ -119,7 +125,7 @@
                 <div class="second-content">
                     <div class="third-main-content">
                         <label class='label' name="Amount">Data</label>
-                        <h4>Monthly DSata of Linda</h4>
+                        <h4>Daily litres amount</h4>
                         <canvas id="monthlyFuelChartForecast"></canvas>
                     </div>
                 </div>
@@ -132,7 +138,7 @@
                 <div class="second-content">
                     <div class="third-main-content">
                         <label class='label' name="Amount">Data</label>
-                        <h4>Monthly DSata of Linda</h4>
+                        <h4>Daily Fuel Price</h4>
                         <canvas id="changesInFuelForecast"></canvas>
                     </div>
                 </div>
