--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                     price</label>
                                 <div>
                                     R
-                                    <input class='input-amount' value="" type="number" />
+                                    <input placeholder="Enter price" class='input-amount' value="" type="number" />
                                 </div>
                             </div>
                         </div>
@@ -62,7 +62,7 @@
                                     amount</label>
                                 <div>
                                     R
-                                    <input class='entered-fuel-amount' value="" type="number" />
+                                    <input placeholder="Enter amount" class='entered-fuel-amount' value="" type="number" />
                                 </div>
                             </div>
                         </div>
@@ -70,7 +70,8 @@
                         <label name="diesel-price">Enter <span class="fuel-change-three">fuel</span> liter</label>
                         <div class="counter-container">
                             <div class="counter-container">
-                                <input class='litres-amount' value="" type="number" />
+                                <input placeholder="enter litres" class='litres-amount' value="" type="number" />
+                                litres
                             </div>
                         </div>
                         <div class="button calc">Calculate</div>
